@@ -29,33 +29,31 @@ import com.echothree.model.data.user.common.pk.UserVisitPK;
 import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
-import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
+import com.echothree.util.server.control.BasePaginatedMultipleEntitiesCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 
 public class GetSecurityRolesCommand
-        extends BaseMultipleEntitiesCommand<SecurityRole, GetSecurityRolesForm> {
-    
+        extends BasePaginatedMultipleEntitiesCommand<SecurityRole, GetSecurityRolesForm> {
+
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                         new SecurityRoleDefinition(SecurityRoleGroups.SecurityRole.name(), SecurityRoles.List.name())
-                        )))
-                )));
+                ))
+        ));
         
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
                 new FieldDefinition("SecurityRoleGroupName", FieldType.ENTITY_NAME, true, null, null)
-                ));
+        );
     }
     
     /** Creates a new instance of GetSecurityRolesCommand */
@@ -66,10 +64,23 @@ public class GetSecurityRolesCommand
     SecurityRoleGroup securityRoleGroup;
 
     @Override
+    protected void handleForm() {
+        var securityRoleGroupName = form.getSecurityRoleGroupName();
+
+        securityRoleGroup = SecurityRoleGroupLogic.getInstance().getSecurityRoleGroupByName(this, securityRoleGroupName);
+    }
+
+    @Override
+    protected Long getTotalEntities() {
+        var securityControl = Session.getModelController(SecurityControl.class);
+
+        return hasExecutionErrors() ? null :
+                securityControl.countSecurityRolesBySecurityRoleGroup(securityRoleGroup);
+    }
+
+    @Override
     protected Collection<SecurityRole> getEntities() {
         Collection<SecurityRole> entities = null;
-
-        securityRoleGroup = SecurityRoleGroupLogic.getInstance().getSecurityRoleGroupByName(this, form.getSecurityRoleGroupName());
 
         if(!hasExecutionErrors()) {
             var securityControl = Session.getModelController(SecurityControl.class);
